# my_practic

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
config/: app.conf.example
deploy/: hello.cgi  htaccess
include/: config.hpp  db.hpp  html.hpp  http.hpp  multipart.hpp  session.hpp  sha256.hpp  validate.hpp
public/: style.css
sql/: schema.sql  seed.sql
src/common/: config.cpp  db.cpp  html.cpp  http.cpp  multipart.cpp  session.cpp  sha256.cpp  validate.cpp
src/pages/: index.cpp  login.cpp  logout.cpp  medicines.cpp  order_delete.cpp  order_form.cpp  orders.cpp  register.cpp  search.cpp  upload.cpp
tests/: http_smoke.sh  smoke.sh
tools/: dev_server.cpp  dev_server.py
